# Simple_Games

GameOfLife/: CMakeLists.txt
GameOfLife/src/: CMakeLists.txt  Engine.cpp  Engine.h  GameInLife.cpp  GameInLife.h  GameOfLife.cpp  GameTxt.cpp  GameTxt.h
LangtonAnt/: CMakeLists.txt
LangtonAnt/src/: CMakeLists.txt  CmdGUI.cpp  CmdGUI.h  Engine.cpp  Engine.h  LangtonAnt.cpp  Play.cpp  Play.h
Snake/: CMakeLists.txt
Snake/src/: CMakeLists.txt  CmdGUI.cpp  CmdGUI.h  Engine.cpp  Engine.h  InputManager.h  InputManagerWin.cpp  InputManagerWin.h  Play.cpp  Play.h  Point.cpp  Point.h  Snake.cpp
Tetris/: CMakeLists.txt
Tetris/src/: CMakeLists.txt  Engine.cpp  Engine.h  GameTxt.cpp  GameTxt.h  InputManager.h  InputManagerWin.cpp  InputManagerWin.h  PlayTetris.cpp  PlayTetris.h  Point.cpp  Point.h  Tetris.cpp
